--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/EditarTorneoFutbol.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/EditarTorneoFutbol.form
@@ -165,7 +165,9 @@
                   </Group>
                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
                       <Group type="102" attributes="0">
-                          <EmptySpace min="-2" pref="304" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="BotonAtras" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="124" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="confirmarCancelar" alignment="1" min="-2" max="-2" attributes="0"/>
                               <Component id="ConfirmarBorrar" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -209,7 +211,10 @@
                       <Component id="ConfirmarBorrar" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="64" max="32767" attributes="0"/>
-                  <Component id="GuardarCambios" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="GuardarCambios" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="BotonAtras" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -372,6 +377,14 @@
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
+        </Component>
+        <Component class="javax.swing.JButton" name="BotonAtras">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="ATRAS"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotonAtrasActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
