--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioEquipo.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioEquipo.form
@@ -152,11 +152,17 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="FINALIZAR"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotonFinalizarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="BotonAtras">
           <Properties>
             <Property name="text" type="java.lang.String" value="ATR&#xc1;S"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotonAtrasActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="MostrarCantParticipantes">
           <Properties>
