--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioPersona.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioPersona.form
@@ -369,6 +369,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="ATRAS"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotonAtrasActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
