--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/tablaDePosiciones.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/tablaDePosiciones.form
@@ -37,7 +37,10 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
-                      <Component id="jScrollPane2" min="-2" pref="775" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="BotonAtras" min="-2" max="-2" attributes="0"/>
+                          <Component id="jScrollPane2" min="-2" pref="775" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
               </Group>
               <EmptySpace pref="123" max="32767" attributes="0"/>
@@ -61,7 +64,9 @@
               <Component id="jScrollPane2" min="-2" pref="174" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="104" max="-2" attributes="0"/>
               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="131" max="32767" attributes="0"/>
+              <EmptySpace pref="46" max="32767" attributes="0"/>
+              <Component id="BotonAtras" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -176,6 +181,14 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="una imagen bien perrona"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="BotonAtras">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="ATRAS"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotonAtrasActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
